adding the files

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="margin margin0">
+    <div class="container" id="border">
+        <header class="margin" id="margin0">
             <h2>Hello,my name is <span>Rajesh</span></h2>
-            <img src="./rajesh.png" alt="">
+            <img src="./rajesh.png" alt="" id="box">
         </header>
-        <section class="margin margin1">
+        <section class="margin" id="margin1">
             <h2>I am a <span>full stack developer</span></h2>
             <p>I am full stack developer,data scientist,data engineer,data analyst,devops engineer</p>
         </section>
-        <footer class="margin margin2">
+        <footer class="margin" id="margin2">
             <h2>
                 My most recent <span>articles</span>
             </h2>
