--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <section class="margin" id="margin1">
             <h2>I am a <span>full stack developer</span></h2>
-            <p>I am full stack developer,data scientist,data engineer,data analyst,devops engineer</p>
+            <p>I am full stack developer 👨‍💻,data scientist,data engineer,data analyst,devops engineer</p>
         </section>
         <footer class="margin" id="margin2">
             <h2>
