--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <section class="margin" id="margin1">
             <h2>I am a <span>full stack developer</span></h2>
             <p>I am full stack developer 👨‍💻,data scientist,data engineer,data analyst,devops engineer</p>
+            <button class="linker"><a href="https://github.com/rajesh604/mongodb">See my work</a></button>
         </section>
         <footer class="margin" id="margin2">
             <h2>
@@ -32,8 +33,9 @@
                 <p>Written by Rajesh on May 7,2023</p>
             </div>
             <p>I am full stack developer,data scientist,data engineer,data analyst,devops engineer
-                <a href="https://github.com/rajesh604">My repo</a>
+                <a href="https://github.com/rajesh604" id="repo">My repo</a>
             </p>
+            <button class="linker"><a href="https://github.com/rajesh604">See all my projects</a></button>
         </footer>
         </article>
     </div>
