adding the data

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <section class="margin" id="margin1">
             <h2>I am a <span>full stack developer</span></h2>
             <p>I am full stack developer 👨‍💻,data scientist,data engineer,data analyst,devops engineer</p>
-            <button class="linker"><a href="https://github.com/rajesh604/mongodb">See my work</a></button>
+            <a class="linker" href="https://github.com/rajesh604/mongodb">See my work</a>
+
         </section>
         <footer class="margin" id="margin2">
             <h2>
@@ -35,7 +36,7 @@
             <p>I am full stack developer,data scientist,data engineer,data analyst,devops engineer
                 <a href="https://github.com/rajesh604" id="repo">My repo</a>
             </p>
-            <button class="linker"><a href="https://github.com/rajesh604">See all my projects</a></button>
+            <a class="linker" href="https://github.com/rajesh604">See all my projects</a>
         </footer>
         </article>
     </div>
