adding the data

--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 <body>
     <div class="container" id="border">
         <header class="margin" id="margin0">
-            <h1>Hello,my name is <span>Rajesh</span></h1>
+            <h1>Hello,my name is <span class="first">Rajesh</span></h1>
             <img src="./rajesh.png" alt="" id="box">
         </header>
         <section class="margin" id="margin1">
-            <h2>I am a <span>full stack developer</span></h2>
+            <h2>I am a <span class="first">full stack developer</span></h2>
             <p>I am full stack developer 👨‍💻,data scientist,data engineer,data analyst,devops engineer</p>
             <a class="linker" href="https://github.com/rajesh604/mongodb">See my work</a>
 
         </section>
         <footer class="margin" id="margin2">
             <h2>
-                My most recent <span>articles</span>
+                My most recent <span class="first">articles</span>
             </h2>
             <div class="tur">
                 <h3>Design systems that scale</h3>
-                <p>Written by Rajesh on May 7,2023</p>
+                <p>Written by <span class="last">Rajesh</span> on <span class="last">May 7,2023</span></p>
             </div>
             <p>I am full stack developer,data scientist,data engineer,data analyst,devops engineer
                 <a href="https://github.com/rajesh604" id="repo">My repo</a>
             </p>
-            <a class="linker" href="https://github.com/rajesh604">See all my projects</a>
+            <a class="linker" href="https://github.com/rajesh604" id="last">See all my projects</a>
         </footer>
         </article>
     </div>
